--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,22 @@ h1 {
 .active {
   background-color: rgb(0, 230, 122);
 }
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.btn-area {
+  
+}
+
+.todo-list-item {
+  background-color: rgb(44, 44, 44);
+  display: flex;
+  justify-content: space-between;
+  padding: 25px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  margin-bottom: 10px;
+}
