--- a/src/App.css
+++ b/src/App.css
@@ -87,15 +87,50 @@ h1 {
 }
 
 .btn-area {
-  
+  margin-bottom: 15px;
 }
 
 .todo-list-item {
   background-color: rgb(44, 44, 44);
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 25px;
   padding-bottom: 10px;
   padding-top: 10px;
   margin-bottom: 10px;
+  box-shadow: 0px 3px 5px rgb(43, 42, 42);
+}
+
+.todo-list-item h3 {
+  font-size: 25px;
+  color: rgb(0, 230, 122);
+  font-weight: bold;
+  margin: 0;
+}
+
+.todo-list-item p {
+  font-size: 14px;
+  color: rgb(161, 161, 161);
+  margin-top: 8px;
+}
+
+.icon {
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.icon:hover {
+  color: red;
+}
+
+.check-icon {
+  font-size: 25px;
+  margin-left: 10px;
+  color: rgb(0, 230, 122);
+  cursor: pointer;
+}
+
+.check-icon:hover {
+  color: rgb(4, 196, 106);
 }
